testing different navbar shift fix

--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -65,7 +65,6 @@ button {
 body.full {
     height: 100%;
     overflow: hidden;
-    scrollbar-gutter: stable;
 }
 
 body.full .site__main {
