--- a/resources/styles/navbar.css
+++ b/resources/styles/navbar.css
@@ -6,6 +6,9 @@
     backdrop-filter: blur(8px);
     border-bottom: 1px solid rgba(61, 174, 69, 0.4);
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     z-index: 100;
 }
 
